# dive-deco

./: BENCHMARKING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: baseline_benchmark.rs  buehlmann_benchmark.rs  buhlmann_benchmark.rs
examples/: ceiling_example.rs  config_example.rs  deco_example.rs  depth_example.rs  depth_time_example.rs  ndl_example.rs
src/: compartment.rs  deco_model.rs  gas.rs  global_types.rs  lib.rs  main.rs  model.rs  step.rs  zhl_16_values.rs  zhl_values.rs
src/buehlmann/: buehlmann_config.rs  buehlmann_model.rs  compartment.rs  deco_model.rs  mod.rs  zhl_values.rs
src/buhlmann/: buhlmann_config.rs  buhlmann_model.rs  compartment.rs  mod.rs  zhl_values.rs
src/common/: cns_table.rs  deco.rs  deco_model.rs  depth.rs  gas.rs  global_types.rs  math_utils.rs  mod.rs  ox_tox.rs  record.rs  runtime.rs  sim.rs  step.rs  time.rs  units.rs
tests/: ascent_descent_tests.rs  buehlmann_tests.rs  buhlmann_tests.rs  deco_model_tests.rs  deco_tests.rs  fixtures.rs  gradient_factors_tests.rs  helium_tests.rs  runtime_tests.rs  travel_tests.rs  trimix_tests.rs
