[package]
name = "dive-deco"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A dive decompression models library (Buehlmann ZH-L 16C)"
repository = "https://github.com/KG32/dive-deco.git"
keywords = ["scuba", "diving", "decompression", "Buhlmann", "Buehlmann"]
categories = ["algorithms", "simulation", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
