[package]
name = "dive-deco"
version = "5.1.0"
edition = "2021"
license = "MIT"
description = "A dive decompression models library (Buhlmann ZH-L 16C)"
repository = "https://github.com/KG32/dive-deco.git"
keywords = ["scuba", "diving", "decompression", "Buhlmann", "Buhlmann"]
categories = ["algorithms", "simulation", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "buhlmann_benchmark"
harness = false

[features]
default = []
serde = ["dep:serde"]
