[package]
name = "dive-deco"
version = "6.0.5"
edition = "2021"
license = "MIT"
description = "A dive decompression models library (Buhlmann ZH-L 16C)"
repository = "https://github.com/KG32/dive-deco.git"
keywords = ["scuba", "diving", "decompression", "Buhlmann", "ZHL-16C"]
categories = ["algorithms", "simulation", "science", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2.15", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "buhlmann_benchmark"
harness = false

[[bench]]
name = "baseline_benchmark"
harness = false

[features]
default = []
no-std = ["dep:libm"]
serde = ["dep:serde"]
